2006-10-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* tools/gnu/classpath/tools/rmic/RMICException.java:
	javadoc corrections, reformatted.

2006-10-07  Christian Elias Naur  <elias@oddlabs.com>

	* gnu/java/lang/InstrumentationImpl.java:
	Made constructor package visible.

2006-10-05  Gary Benson  <gbenson@redhat.com>

	* java/net/Socket.java
	(Socket): Perform security check on address not hostname.

2006-10-04  Roman Kennke  <kennke@aicas.com>

	* javax/swing/tree/VariableHeightLayoutCache.java
	(getBounds): When rect is null, create a new Rectangle.

2006-10-04  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/java-nio/javanio.c (cpnio_read, cpnio_readv)
	(cpnio_write, cpnio_writev, cpnio_socket, cpnio_connect)
	(cpnio_accept, cpnio_sendto, cpnio_recvfrom, cpnio_fcntl)
	(cpnio_select): Use CPNIO_EXPORT.
	* native/jni/java-nio/javanio.h (CPNIO_EXPORT): Define to static
	inline instead of extern inline, as newer GCCs changed their
	behavior.

2006-10-04  Gary Benson  <gbenson@redhat.com>

	* java/net/InetAddress.java: Updated javadoc.
	(<clinit>, getByLiteral): Throw InternalError on failures.

2006-10-03  Francis Kung  <fkung@redhat.com>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(compCtx): New field for composite context.
	(copy): Copy composite.
	(dispose): Dispose of composite context.
	(getNativeCM): New method.
	(setComposite): Discard old composite context and set up new context.
	(setRenderingHints): Update composite context.
	* gnu/java/awt/peer/gtk/CairoSurface.java
	(nativeColorModel): New field, renamed from nativeModel.
	(nativeModel): Renamed field to nativeColorModel.
	(CairoSurface(int, int)): Call new method to create sample model.
	(createNativeSampleModel): New method.
	(getBufferedImage): Updated variable name.
	* gnu/java/awt/peer/gtk/VolatileImageGraphics.java
	(buffer): New field.
	(createBuffer): New method.
	(draw): New method.
	(drawComposite): New method.
	(drawGlyphVector): New method.