@@ -1,3 +1,8 @@
+2006-10-03  Robert Schuster  <robertschuster@fsfe.org>
+
+	* gnu/java/nio/KqueueSelectorImpl.java: Renamed field
+	sizeof_struct_kevent to _sizeof_struct_kevent.
+
 2006-10-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
 
 	* tools/gnu/classpath/tools/rmic/RMICException.java:
